# mailserver-webui

./: .env  .gitignore  Cargo.toml  db.sqlite  flake.nix
.sqlx/: query-01c70223a1a7e1715c20a6495a8c05ed5cf2b6175d4d17e5c906653b7fe8f472.json  query-0398fc0c22adf6899cd9034fb7ed689e788724f6bc46928fde69e8bc8f866c73.json  query-03de056dbcda6b41ec0714136a4052fe495c707d13b8fcf97ee7e0ad8ac49848.json  query-057dc966ebb2ca30416d2c9061984e72da461c5d306eb2c9a2fba05def6a116e.json  query-08e87837f684c4a39489d72fba61a7e070df639dca96fdbcfe44d602a0f54ea7.json  query-097571e33c4473e5c3b4a0067634f0b207cfda28abae5369d5aa868e9a93cf24.json  (+81 more)
app/: Cargo.toml
app/src/: main.rs  rocket.rs
app/src/rocket/: api.rs  auth.rs  content.rs  messages.rs  response.rs  template.rs
app/src/rocket/api/: admin.rs  auth.rs  change_pw.rs
app/src/rocket/api/admin/: domain.rs
app/src/rocket/api/admin/domain/: change_owner.rs  create_account.rs  create_alias.rs  create_subdomain.rs  delete_accounts.rs  delete_alias.rs  delete_subdomains.rs  update_account.rs  update_domain.rs
app/src/rocket/api/auth/: check_login.rs  login.rs  logout.rs  refresh_session.rs
app/src/rocket/auth/: check_password.rs  permissions.rs  session.rs
app/src/rocket/content/: admin.rs  change_pw.rs  email_settings.rs  index.rs  style.rs
app/src/rocket/content/admin/: domain.rs
app/src/rocket/content/admin/domain/: account.rs  accounts.rs  aliases.rs  permissions.rs  subdomains.rs
app/src/rocket/template/: authenticated.rs  change_pw.rs  error.rs  login.rs
app/src/rocket/template/authenticated/: admin.rs  domain_base.rs
app/src/rocket/template/authenticated/domain/: index.rs
app/templates/: base.html  change_pw.html  login.html  styles.css
app/templates/authenticated/: admin.html  domain_base.html
app/templates/authenticated/domain/: index.html
app/templates/parts/: email_settings.html  header.html
app/templates/parts/authenticated/: domain_header.html  header.html  logout.html
macro/: Cargo.toml
src/: main.rs  (+1 more)
(+39 files in other folders)
