[package]
name = "mailserver-web"
version = "0.1.0"
edition = "2024"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
dotenv = "0.15.0"
const_format = "0.2.34"#compile-time string formatting
anyhow = "1.0.97"#error handling

#logging
log = "0.4.26"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

pw_hash = "0.1.1"#validating password hash
flate2 = "1.1.0" #compression
base64 = "0.22.1"
serde = { version = "1.0.130", features = ["derive"] } #serialization
serde_json = "1.0.68" #json serialization

#generic tech-stack
rocket = { version = "0.5.1", features = ["secrets"] }
tokio = "1.43.0"
sqlx = { version = "0.8.3", features = ["all-databases", "runtime-tokio-rustls"]}